2003-07-17  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-node-document.c, cong-editor-node-element-span.c, cong-editor-node-element-structural.c, cong-editor-node-element-unknown.c, cong-editor-node-text.c, cong-editor-node-unimplemented.c, cong-editor-node.h

	Suppress some of the debug spew
	
	* cong-editor-area-bin.c, cong-editor-area-border.c, cong-editor-area-composer.c, cong-editor-area-container.c, cong-editor-area-container.h, cong-editor-area-pixbuf.c, cong-editor-area-spacer.c, cong-editor-area-span-tag.c, cong-editor-area-structural-tag.c, cong-editor-area-text.c, cong-editor-area-underline.c, cong-editor-area-unknown-tag.c, cong-editor-area.c, cong-editor-area.h, cong-editor-widget3.c

	Allow areas to change their requisition

	* cong-document.c

	Fixed mismatched signal class struct offsets	
	
2003-07-16  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-text.c, cong-editor-area-text.h, cong-editor-area.c, cong-editor-area.h, cong-editor-node-text.c, cong-editor-widget3-impl.h, cong-editor-widget3.c

	CongEditorWidget3 no longer uses CongView; beginning to hook up change notifcations directly.
	
	* cong-debug-log-view.c, cong-document.c, cong-document.h, cong-file-open.c, cong-menus.c, cong-plugin.c, cong-primary-window.c, cong-view.h, global.h

	GObject-ification of CongDocument
	
	* cong-marshal.c, cong-marshal.h, Makefile.am

	New files: Marshalling functions
	
	* cong-editor-widget3.c

	Fixed sizing problem - stopped vcomposers being expandable
	
	* cong-editor-node-document.c, cong-editor-node-element-span.c, cong-editor-node-element-structural.c, cong-editor-node-element-unknown.c, cong-editor-node-text.c, cong-editor-node-unimplemented.c, cong-editor-node.c, cong-editor-node.h, cong-editor-widget3.c 

	Adding areas is now the responsibility of the widget in a single place in the code, not the handler method in each of the different node subclasses.

2003-07-15  David Malcolm <david@davemalcolm.demon.co.uk>
